// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`smooch-action-send-message Walkthrough passes in the correct arguments to SmoochCore 1`] = `
Array [
  Array [
    Object {
      "keyId": undefined,
      "scope": "app",
      "secret": undefined,
      "serviceUrl": "mock-smooch-api-url",
    },
  ],
]
`;

exports[`smooch-action-send-message Walkthrough passes in the correct arguments to smooch.appUsers.sendMessage() 1`] = `
Array [
  Array [
    Object {
      "appId": "5e31c81640a22c000f5d7f30",
      "message": Object {
        "metadata": Object {
          "from": "from",
          "interactionId": undefined,
          "type": "system",
        },
        "role": "appMaker",
        "text": "text",
        "type": "text",
      },
      "userId": "667802d8-2260-436c-958a-2ee0f71f73f8",
    },
  ],
]
`;

exports[`smooch-action-send-message Walkthrough passes in the correct arguments to sqs.createQueue() 1`] = `
Array [
  Array [
    Object {
      "QueueName": "250faddb-9723-403a-9bd5-3ca710cb26e5_250faddb-9723-403a-9bd5-3ca710cb26e0",
    },
  ],
]
`;

exports[`smooch-action-send-message Walkthrough passes in the correct arguments to sqs.sendMessage() in sendFlowActionResponse() 1`] = `
Array [
  Object {
    "MessageBody": "{\\"tenantId\\":\\"250faddb-9723-403a-9bd5-3ca710cb26e5\\",\\"actionId\\":\\"5e31c81640a22c000f5d7f28\\",\\"data\\":{\\"source\\":\\"smooch\\",\\"subId\\":\\"667802d8-2260-436c-958a-2ee0f71f73f0\\",\\"metadata\\":{},\\"update\\":{}}}",
    "QueueUrl": null,
  },
]
`;

exports[`smooch-action-send-message Walkthrough passes in the correct arguments to sqs.sendMessage() in sendSqsMessage() 1`] = `
Array [
  Object {
    "MessageBody": "{\\"tenantId\\":\\"250faddb-9723-403a-9bd5-3ca710cb26e5\\",\\"actionId\\":\\"7534c040-534d-11ea-8aa0-c32d6a748e46\\",\\"subId\\":\\"7534c040-534d-11ea-8aa0-c32d6a748e46\\",\\"type\\":\\"send-message\\",\\"resourceId\\":\\"250faddb-9723-403a-9bd5-3ca710cb26e0\\",\\"messageType\\":\\"received-message\\",\\"message\\":{\\"from\\":\\"from\\",\\"timestamp\\":null,\\"type\\":\\"system\\",\\"text\\":\\"text\\"}}",
    "QueueUrl": "new-queueurl",
  },
]
`;

exports[`smooch-action-send-message throws a warning when there is a error sending an error response 1`] = `"Error sending smooch message and error response to customer"`;

exports[`smooch-action-send-message throws a warning when there is a error sending an error response 2`] = `"Error sending message and response to SQS queue"`;

exports[`smooch-action-send-message throws an error when there is a problem creating queue 1`] = `"Error creating queue"`;

exports[`smooch-action-send-message throws an error when there is a problem geting queue url 1`] = `"Error trying to get queue url"`;

exports[`smooch-action-send-message throws an error when there is a problem retrieving cx credentials 1`] = `"Error retrieving cx credentials"`;

exports[`smooch-action-send-message throws an error when there is a problem retrieving digital channels credentials 1`] = `"Error retrieving digital channels credentials"`;

exports[`smooch-action-send-message throws an error when there is a problem sending message to SQS queue 1`] = `"Error sending message to SQS queue"`;

exports[`smooch-action-send-message throws an error when there is a problem sending smooch message to customer 1`] = `"Error sending smooch message to customer"`;

exports[`smooch-action-send-message throws an error when there is a problem validating digital channels credentials 1`] = `"Error validating digital channels credentials"`;
